# 4peanuts

./: README.md  indevendent.py  pyproject.toml
4peanuts_And_ers.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
icons/: 4pn-logo.pdn
indevendent_And_ers.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
logs/: daily-log-2024-04-25  daily-log-2024-04-30.txt  daily-log-2024-05-01.txt  lifetime-logs  lifetime-logs.txt
saves/: 4peanuts-2024_04_09-01_26_20-save.fpn  test3withdeals.fpn  testing3.fpn  testsave2.fpn
src/: 4peanuts.py  indevendent.py
