[project]
name = "indevendent_And-ers"
version = "0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0 License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/And-ers/indevendent/"
